--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,34 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
+.banner-container{
+    background-color: #cacaca;
+}
+.banner-column{
+    background-color: #8d8d8d;
+}
+
+.navbar-container{
+    background-color: #262B37;
+    
+}
+.about-container{
+    background-color: #00BDBD;
+}
+
+.education-container{
+    background-color: #EEEEEE;
+}
+
+.bg-redtype{
+    background-color: #FB857F;
+}
+.redtype-color{
+    color: #FB857F;
+}
+ .circle{
+    background-color: #FB857F;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+ }
