--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,10 @@ body{
 }
 
 .navbar-container{
+    top: 0;
     background-color: #262B37;
+    position: sticky;
+    z-index: 2;
     
 }
 .about-container{
@@ -23,6 +26,9 @@ body{
 .bg-redtype{
     background-color: #FB857F;
 }
+.bg-redtype:hover{
+    color: black!important;
+}
 .redtype-color{
     color: #FB857F;
 }
@@ -32,3 +38,13 @@ body{
     height: 150px;
     border-radius: 50%;
  }
+ .project-container{
+     background-color: #2BB3DD;
+ }
+ .form-container{
+     background-color: #474D5D;
+ }
+ .inner-form{
+     background-color: #585F73;
+ }
+ 
