--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,4 +47,19 @@ body{
  .inner-form{
      background-color: #585F73;
  }
- 
+ .footer{
+     background-color: #2BB3DD;
+ }
+ .circle-2{
+     width: 60px;
+     height: 60px;
+     border-radius: 50%;
+     display: inline-block;
+     background-color: white;
+     font-size: 40px;
+     text-align: center;
+     color: #2BB3DD;
+ }
+ .circle-2:hover{
+     background-color: #474D5D;
+ }
